修改home点击的url，改为github_repo的位置

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
             <div id="container">
                 <div id="header">
                     <div id="post-nav">
-                        <a href="/note">Home</a>
+                        <a id="home_href" href="/">Home</a>
                     </div>
                 </div>
                 <div class="clearfix"></div>
