--- a/index.html
+++ b/index.html
@@ -1,63 +1,47 @@
-<!DOCTYPE HTML>
-<html>
-    <head>
-        <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-        <meta http-equiv="x-ua-compatible" content="ie=edge">
-        <link rel="Stylesheet" type="text/css" href="css/style.css">
-        <link rel="Stylesheet" type="text/css" href="css/tango.css">
-        <link rel="Stylesheet" type="text/css" href="css/github-markdown.css">
-        <title></title>
-        <script src="config.js"></script>
-        <script src="ajax.js"></script>
-        <script src="util.js"></script>
-        <script src="app.js"></script>
-    </head>
+<!DOCTYPE html>
+<html lang="en" class="loading">
+<head>
+<meta charset="UTF-8">
+<meta http-equiv="X-UA-Compatible" content="IE=edge">
+<link rel="shortcut icon" type="image/x-icon" href="/favicon.ico">
+<meta name="viewport" content="width=device-width,minimum-scale=1,maximum-scale=1,user-scalable=no">
+<title> Loading... </title>
+<script>
+/*
+** if organization repository, set 'organization' to true
+** blog config here
+** token should be separated by '#'
+** example: 5#c31bffc137f44faf7efc4a84da827g7ca2cfeaa
+** muti-authors should be separated by ','. and the user is included in
+** example: 'LoeiFy, author0'
+**
+*/
 
-    <body>
+window.config = {"organization":false,"order":"CREATED_AT","title":"","itlgl":"","repository":"note","authors":"","ignores":"","token":"4a27c49affe39dd9fd9f#e27c49e1c24cdbaac18d","perpage":10}
+</script>
 
-        <div id="home">
-            <div id="container">
-                <div id="blog_title"></div>
-                <div id="index">
-                    <image id="wait" src="wait.gif" class="aligncenter"></image>
-                    <ul id="post_list"></ul>
-                    <div class="clearfix"></div>
-                </div>
-            </div>
-        </div>
+<script>
+var ua = window.navigator.userAgent
+if (ua.indexOf('MSIE') > -1 || ua.match(/Trident\/7\./)) {
+  var head = document.getElementsByTagName('head')[0]
+  var script = document.createElement('script')
+  script.type = 'text/javascript'
+  script.src = 'promise.js'
+  head.appendChild(script)
+}
+</script>
 
-        <div id="page">
-            <div id="container">
-                <div id="header">
-                    <div id="post-nav">
-                        <a id="home_href" href="/">Home</a>
-                    </div>
-                </div>
-                <div class="clearfix"></div>
-                <div id="title"></div>
-                <div id="content" class="markdown-body">
-                    <image id="wait" src="wait.gif" class="aligncenter"></image>
-                </div>
-                <div id="comment">
-                </div>
-            </div>
-        </div>
-
-        <div id="footer"></div>
-    </body>
-
-    <script type="text/javascript">
-        var id = parseInt(loadPageVar("p"));
-        if (id) {
-            hideElement("home");
-            showElement("page");
-            gotoPage(id);
-        } else {
-            hideElement("page");
-            showElement("home");
-            gotoHome();
-        }
-    </script>
-
+<style>.error,.loading,.transition{height:100%}.error body,.loading body,.transition body{height:100%}#loader{text-align:center;position:fixed;z-index:3;left:0;top:0;height:100%;width:100%;opacity:0;visibility:hidden;-webkit-transition:all .3s ease;transition:all .3s ease;background-color:rgba(255,255,255,.95)}.loading #loader{opacity:1;visibility:visible}.loading #loader div{display:inline-block;width:50px;height:50px;vertical-align:middle;-webkit-border-radius:3px;border-radius:3px;background-color:#fff;-webkit-box-shadow:0 0 3px rgba(0,0,0,.15);box-shadow:0 0 3px rgba(0,0,0,.15)}.loading #loader div:before{content:'';width:26px;height:26px;display:block;margin:8px auto 0;-webkit-border-radius:20px;border-radius:20px;-webkit-animation:loading .5s linear forwards infinite;animation:loading .5s linear forwards infinite;border-top:4px solid #0089fa;border-right:4px solid #ff002b;border-bottom:4px solid #ffa900;border-left:4px solid #00a753}.loading #loader:after{content:'';display:inline-block;height:100%;vertical-align:middle}@keyframes loading{100%{transform:rotate(360deg)}}@-webkit-keyframes loading{100%{-webkit-transform:rotate(360deg)}}</style>
+</head>
+<body>
+  <div class="page home">
+    <div id="user"></div>
+    <div id="posts"></div>
+  </div>
+  <div class="page single">
+    <div id="post"></div>
+    <div id="comments"></div>
+  </div>
+  <div id="loader"><div></div></div>
+<script type="text/javascript" src="build.a0a61a10.js"></script></body>
 </html>
-
