--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 **
 */
 
-window.config = {"organization":false,"order":"CREATED_AT","title":"","itlgl":"","repository":"note","authors":"","ignores":"","token":"4#a27c49affe39dd9fd9fe27c49e1c24cdbaac18d","perpage":10}
+window.config = {"organization":false,"order":"CREATED_AT","title":"日常笔记","user":"itlgl","repository":"note","authors":"","ignores":"","token":"4#a27c49affe39dd9fd9fe27c49e1c24cdbaac18d","perpage":10}
 </script>
 
 <script>
