--- a/404.html
+++ b/404.html
@@ -9,7 +9,7 @@
 </head>
 <body>
   <script type="text/plain" src="http://www.qq.com/404/search_children.js"
-          charset="utf-8" homePageUrl="/"
+          charset="utf-8" homePageUrl="/note"
           homePageName="回到我的主页">
   </script>
   <script src="https://qzone.qq.com/gy/404/data.js" charset="utf-8"></script>
