--- a/404.html
+++ b/404.html
@@ -6,6 +6,7 @@
   <meta name="robots" content="all" />
   <meta name="robots" content="index,follow"/>
   <link rel="stylesheet" type="text/css" href="https://qzone.qq.com/gy/404/style/404style.css">
+  <title>404寻人</title>
 </head>
 <body>
   <script type="text/plain" src="http://www.qq.com/404/search_children.js"
